# plank

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  grammar.bnf  plank-language.md
examples/: basics.plk  closures.plk  function_pointers.plk  generics.plk  generics2.plk  pointers.plk  strings.plk  structs.plk  types.plk
plank/: Cargo.toml
plank-errors/: Cargo.toml
plank-errors/src/: lib.rs  position.rs  printer.rs  reporter.rs  typenum.rs
plank-frontend/: Cargo.toml
plank-frontend/src/: assign_check.rs  build_cfg.rs  build_ir.rs  cast_check.rs  dead_code.rs  gen_constructors.rs  lib.rs  literal_size_check.rs  resolve_symbols.rs  resolved_ast.rs  return_check.rs  struct_check.rs  struct_layout.rs  symbols.rs  type_param_check.rs  wildcard_check.rs
plank-interpreter/: Cargo.toml
plank-interpreter/src/: lib.rs
plank-ir/: Cargo.toml
plank-ir/src/: ir.rs  lib.rs  printer.rs  validation.rs
plank-server/: Cargo.toml
plank-server/src/: jsonrpc.rs  main.rs  transport.rs
plank-syntax/: Cargo.toml
plank-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  position.rs  tokens.rs
plank-x86-backend/: Cargo.toml
plank-x86-backend/src/: compiler.rs  elf_generator.rs  lib.rs  printer.rs  return_fix.rs  x86.rs
plank/src/: ast_printer.rs  main.rs
src/: Cargo.toml
src/errors/: Cargo.toml
src/lang-server/: Cargo.toml
src/plank/: Cargo.toml
src/plank-server/: Cargo.toml
src/plank-server/src/: transport.rs
src/test-bin/: Cargo.toml
src/test_bin/: Cargo.toml
tasks/grammar/: grammar.bnf
tests/: Cargo.toml
(+56 files in other folders)
