[package]
name = "plank"
version = "0.1.0"
authors = ["Domantas Jadenkus <djadenkus@gmail.com>"]

[dependencies]
plank-errors = { path = "../plank-errors" }
plank-syntax = { path = "../plank-syntax" }
plank-frontend = { path = "../plank-frontend" }
plank-ir = { path = "../plank-ir" }
clap = "2.26.2"
