[package]
name = "plank-server"
version = "0.1.0"
authors = ["Domantas Jadenkus <djadenkus@gmail.com>"]

[dependencies]
languageserver-types = "0.12.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.3.8"
simple-logging = "1.0.1"
url = "1.5.1"
errors = { path = "../errors" }
syntax = { path = "../syntax" }
